<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:keepScreenOn="true"
	tools:context="timo.home.activityMonitor.HistoryVisualiser" >
 		
		<!--Add activity pattern (MAD) data view -->
		<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
       android:id="@+id/activityPlotDay"/>
	 	<!--Add histogram of the day -->
	 			<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
       android:id="@+id/activityHistogramDay"/>
   		 
 	<!--Separator-->
 	<View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@android:color/darker_gray"/>

       
    	
  		<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    	 		<Button android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/mDaysButton"
             android:id="@+id/mDaysButton"
             android:textStyle="bold" />
		     <Button android:layout_width="match_parent"
		             android:layout_height="wrap_content"
		             android:layout_weight="1"
		             android:text="@string/mDayStartTime"
		             android:id="@+id/mDayStartTime"
		             android:textStyle="bold" />
		    <Button android:layout_width="match_parent"
		             android:layout_height="wrap_content"
		             android:layout_weight="1"
		             android:text="@string/mDayStopTime"
		             android:id="@+id/mDayStopTime"
		             android:textStyle="bold" />
		 </LinearLayout> 	
      
</LinearLayout>
